Replace with Integer.valueOf()